# bevy_asky

./: CHANGELOG.md  Cargo.toml  README.md  notes.md  todo.org
examples/: basic.rs  checkbox.rs  checkbox_group.rs  confirm.rs  number.rs  password.rs  radio.rs  radio_group.rs  readme.rs  text.rs  text_async.rs  toggle.rs
examples/async/: checkbox_group.rs
examples/common/: lib.rs
src/: async.rs  construct.rs  dest.rs  focus.rs  lib.rs  num_like.rs  string_cursor.rs  sync.rs
src/focus/: advanced.rs  mod.rs  simple.rs
src/prompt/: Checkbox.rs  checkbox.rs  confirm.rs  input.rs  mod.rs  number.rs  password.rs  radio.rs  text.rs  toggle.rs
src/view/: ascii.rs  button.rs  click.rs  color.rs  interaction.rs  mod.rs  widget.rs
src/view/color/: confirm.rs  mod.rs  text.rs
