[package]
name = "bevy_asky"
description = "A simple question-and-answer UI for Bevy"
version = "0.1.0"
edition = "2021"
authors = ["Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "bevy",
    "gamedev",
]
categories = [
    "game-development"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shanecelis/bevy_asky"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [ "bevy_text", "bevy_ui", "default_font" ] }
bevy-alt-ui-navigation-lite = { version = "0.2.1", optional = true }
# bevy-ui-navigation = "0.33.1"
bevy_defer = { version = "0.12.1", optional = true }
futures = { version = "0.3.30", optional = true }
thiserror = "1.0.62"

[features]
default = [ "color" ]
async = [ "dep:bevy_defer", "dep:futures" ]
focus = [ "dep:bevy-alt-ui-navigation-lite" ]
button = []
color = []
ascii = []

[dev-dependencies]
bevy = { version = "0.14.0" }
bevy-inspector-egui = "0.27.0"

[[example]]
name = "text-async"
path = "examples/text_async.rs"
required-features = ["async"]

[[example]]
name = "checkbox-group-async"
path = "examples/async/checkbox_group.rs"
required-features = ["async"]
